# FreePunch

./: LICENSE  README.md  checador.service  config.example.toml  pyproject.toml  setup.py
checador/: __init__.py  auth.py  camera.py  config.py  database.py  fingerprint.py  main.py  sync.py  timeclock.py
checador/api/: __init__.py  admin.py  calibration.py  punch.py  sync.py
checador/cli/: __init__.py  main.py
checador/templates/: admin.html  calibration.html  index.html
scripts/: install_nbis.sh
